# textureGenerator

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: rust.yml
core/: Cargo.toml
core/src/: lib.rs
graph/: Cargo.toml
graph/src/: lib.rs
gui/: Cargo.toml
gui/src/: app.rs  lib.rs  main.rs  old_app.rs
src/: app.rs  lib.rs  main.rs  nodes.rs  old_main.rs
src/nodes/: generators.rs  transformers.rs
tex_core/: Cargo.toml
tex_core/src/: lib.rs
texture_generators/: Cargo.toml
texture_generators/src/: lib.rs
texture_generators/src/nodes/: generators.rs  transformers.rs
