[package]
name = "texture_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "tex_core",
    "graph",
    "gui",
    "texture_generators"
]

[dependencies]
image = "0.24.6"
graph = {path="graph"}
tex_core = {path="tex_core"}
texture_generators = {path="texture_generators"}